// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts End-to-End Tests when creating a new alert will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "icon",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "String must contain at least 1 character(s)",
      "minimum": 1,
      "path": [
        "title",
      ],
      "type": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "message",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "active",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "expires",
      ],
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when creating a new alert will return a 400 response if the request body is missing required properties 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "icon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "title",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "message",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when listing alerts will return a 400 response if the query string contains invalid params 1`] = `
{
  "issues": [
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "limit",
      ],
      "received": "nan",
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when listing alerts will return a list of alerts with default params 1`] = `
[
  {
    "active": "2024-03-22T17:53:07.600Z",
    "expires": "2024-05-04T12:55:09.699Z",
    "icon": "female",
    "id": "ac7f6181-aa8a-4440-884b-d7eb28d3ef92",
    "message": "Quia officiis dolore illum laudantium ea animi distinctio. Sit explicabo quis quis odio esse. Iste ratione quod omnis libero. Accusantium tempora aspernatur corporis assumenda deleniti eveniet delectus earum.
Blanditiis delectus minima maiores adipisci beatae ab. Nostrum nulla ipsa cum distinctio voluptatem blanditiis distinctio sunt earum. Distinctio ratione vero veniam. Beatae eum natus. Magni maiores veniam culpa ipsam dolorum.",
    "title": "Aperiam quia ipsum illo.",
  },
  {
    "active": "2024-03-21T19:58:49.588Z",
    "icon": "gamebird",
    "id": "0ccc27a7-1597-4934-84ad-873c42997ec9",
    "message": "Tempora rem adipisci corrupti repellat facilis expedita a reprehenderit ut. Odio reprehenderit laboriosam est voluptatum cupiditate eos ipsum officia iusto. Ea deserunt natus possimus. Consectetur quis impedit quas eos.
Porro aut ducimus perspiciatis unde quibusdam fugiat nemo tenetur aliquid. Inventore facere ducimus est reiciendis. Voluptatem omnis saepe fugit nobis unde eligendi eum.",
    "title": "Laboriosam dolorem ipsam unde explicabo alias molestiae.",
  },
  {
    "active": "2024-03-04T13:33:21.151Z",
    "expires": "2024-04-14T02:56:07.964Z",
    "icon": "Technician",
    "id": "6691762f-b4c7-43cf-a424-b857acc0f59a",
    "message": "Tempore doloremque dignissimos ut distinctio sit ex molestiae. Tenetur tenetur totam a distinctio placeat voluptatem ipsam. Modi libero sapiente dicta.
Eligendi sit eius quis vel saepe exercitationem incidunt. Pariatur error ipsam tenetur vero facilis alias ex. Non tempora fuga dolorum voluptatum hic. Neque perspiciatis fuga voluptatem quisquam consequatur minus. Amet sit asperiores minus occaecati itaque cum.",
    "title": "A illum reiciendis rerum ratione maxime dolorem dignissimos.",
  },
  {
    "active": "2024-03-03T08:32:39.818Z",
    "expires": "2024-05-13T16:53:14.985Z",
    "icon": "Rap",
    "id": "38d5da43-9837-4bf2-8142-60f4a518e969",
    "message": "Voluptatibus eveniet sit tempora consequatur. Deleniti voluptatum laborum harum. Impedit repudiandae repellat doloremque excepturi dolorum unde ratione vero libero. Dolore alias ab exercitationem a voluptates quam distinctio.
Dicta nulla minima temporibus cumque nam molestiae quos. Laudantium nobis perspiciatis ipsam repellendus velit tempore adipisci quisquam aut. Optio distinctio iste tempora corporis aliquid facilis illo ipsam voluptatibus.",
    "title": "Architecto iste culpa praesentium doloribus dicta totam consectetur placeat minima.",
  },
  {
    "active": "2024-02-23T11:06:32.015Z",
    "expires": "2024-05-08T22:49:50.725Z",
    "icon": "Northeast",
    "id": "58721d09-c80c-4d57-a3f5-85c69d0acda2",
    "message": "Hic sed vero suscipit vitae. Hic nam nobis nemo explicabo. Quisquam quaerat ex suscipit est ducimus ex odit laboriosam aperiam. Ut ipsa quibusdam laborum nisi rem exercitationem iste.
Cumque esse sit iure ipsum. Praesentium explicabo aspernatur modi odit est officiis deleniti nemo. Veniam porro excepturi alias repellat natus pariatur. Ratione magnam aperiam temporibus assumenda necessitatibus impedit hic explicabo.",
    "title": "Repellendus velit est voluptates corporis officia quaerat cupiditate.",
  },
  {
    "active": "2024-02-23T00:38:55.904Z",
    "expires": "2024-03-28T17:57:51.516Z",
    "icon": "Product",
    "id": "c4d1a4dc-f273-4c19-9b11-9ceaf1c01e3d",
    "message": "Numquam sint autem. Maxime aliquid doloremque modi quidem. Minima quae voluptatibus sint fugit minima quas saepe praesentium.
Culpa illum nesciunt reprehenderit voluptatem nemo nihil vitae. Rem quos repellat laborum suscipit. Dolorum perferendis dignissimos pariatur illo illum assumenda harum. Quae ipsam amet quidem voluptatibus. Laboriosam quibusdam repudiandae ut odio soluta in corrupti possimus quibusdam.",
    "title": "Iusto iusto eos accusantium ea repellendus laborum dignissimos saepe maiores.",
  },
  {
    "active": "2024-02-22T03:44:39.159Z",
    "expires": "2024-05-20T14:07:17.597Z",
    "icon": "Hyundai",
    "id": "7d1c768b-f1df-4032-b822-7f01fe68ef80",
    "message": "Eius nobis consequuntur occaecati quod. Tempora velit sapiente pariatur rem iusto ipsam. Magni eos maxime earum placeat. Iure temporibus dolorum dolores minima. Consequatur nostrum quod occaecati veritatis iure. Saepe accusantium corrupti dolorum odit cum.
Quis eum quae aliquid velit repellat nam blanditiis. Expedita pariatur aperiam impedit fugit quod distinctio voluptas. Beatae fugiat fugiat. Laboriosam omnis labore modi modi. Commodi eos corrupti id est ipsum animi laudantium quidem. Quos odio deserunt dolor aut voluptatum.",
    "title": "Voluptatem eius officiis iure dolorem quam ratione eos recusandae in.",
  },
  {
    "active": "2024-02-21T14:53:58.427Z",
    "expires": "2024-04-17T20:50:33.926Z",
    "icon": "Reggae",
    "id": "ea9e3a54-ef36-4d2e-aa92-a4c932ca45d8",
    "message": "Numquam quo odit ex aspernatur aliquam totam suscipit perspiciatis iste. Iure sequi libero quis eaque rerum eaque. Facere laboriosam accusantium in fugit. Soluta dolore voluptatibus. Ipsum aliquam perferendis rem reiciendis tenetur.
Praesentium saepe consectetur autem vero labore provident tempora provident. Non quaerat voluptatem repellendus. Illum error quo neque. Necessitatibus quae labore.",
    "title": "Quod dolore debitis laboriosam numquam similique.",
  },
  {
    "active": "2024-02-16T07:12:25.064Z",
    "icon": "plum",
    "id": "6a579869-fe57-4b7c-89e5-13b839b28863",
    "message": "Quam modi quas minima deleniti minus veniam quos quasi hic. Inventore dolorem quibusdam dolore vel illo. Iure odio vero nulla. Ad neque sapiente. Itaque ipsa aspernatur assumenda tempore tenetur impedit. Deserunt quos quisquam exercitationem beatae quasi eum enim.
Incidunt consectetur voluptas. Beatae incidunt maiores ipsa eius ut modi dicta officiis. Voluptates quibusdam assumenda et voluptates culpa.",
    "title": "Cupiditate blanditiis vero dolores quisquam voluptas beatae nostrum possimus alias.",
  },
  {
    "active": "2024-02-15T09:48:24.875Z",
    "expires": "2024-03-28T14:45:05.532Z",
    "icon": "evenly",
    "id": "41d51fe5-7de6-4b5b-85e3-ec7e169e9dfc",
    "message": "Libero facilis officia ducimus vero dicta. Nulla illum corporis odio amet impedit ipsa. Aperiam est pariatur. Fugit eveniet magnam nostrum quam temporibus fugit. Autem dicta cupiditate non. Facere consequatur tenetur quam asperiores dolore nam magni.
Aliquam aspernatur ullam odit veritatis sapiente. Magnam dolor nihil consectetur ut modi natus neque. Doloremque facere quasi soluta tempore accusantium amet at. Excepturi nulla ipsa deserunt commodi.",
    "title": "Expedita eius fuga occaecati.",
  },
]
`;

exports[`Alerts End-to-End Tests when listing alerts will return a list of alerts with params provided in the query string 1`] = `
[
  {
    "active": "2024-02-23T11:06:32.015Z",
    "expires": "2024-05-08T22:49:50.725Z",
    "icon": "Northeast",
    "id": "58721d09-c80c-4d57-a3f5-85c69d0acda2",
    "message": "Hic sed vero suscipit vitae. Hic nam nobis nemo explicabo. Quisquam quaerat ex suscipit est ducimus ex odit laboriosam aperiam. Ut ipsa quibusdam laborum nisi rem exercitationem iste.
Cumque esse sit iure ipsum. Praesentium explicabo aspernatur modi odit est officiis deleniti nemo. Veniam porro excepturi alias repellat natus pariatur. Ratione magnam aperiam temporibus assumenda necessitatibus impedit hic explicabo.",
    "title": "Repellendus velit est voluptates corporis officia quaerat cupiditate.",
  },
  {
    "active": "2024-02-23T00:38:55.904Z",
    "expires": "2024-03-28T17:57:51.516Z",
    "icon": "Product",
    "id": "c4d1a4dc-f273-4c19-9b11-9ceaf1c01e3d",
    "message": "Numquam sint autem. Maxime aliquid doloremque modi quidem. Minima quae voluptatibus sint fugit minima quas saepe praesentium.
Culpa illum nesciunt reprehenderit voluptatem nemo nihil vitae. Rem quos repellat laborum suscipit. Dolorum perferendis dignissimos pariatur illo illum assumenda harum. Quae ipsam amet quidem voluptatibus. Laboriosam quibusdam repudiandae ut odio soluta in corrupti possimus quibusdam.",
    "title": "Iusto iusto eos accusantium ea repellendus laborum dignissimos saepe maiores.",
  },
  {
    "active": "2024-02-22T03:44:39.159Z",
    "expires": "2024-05-20T14:07:17.597Z",
    "icon": "Hyundai",
    "id": "7d1c768b-f1df-4032-b822-7f01fe68ef80",
    "message": "Eius nobis consequuntur occaecati quod. Tempora velit sapiente pariatur rem iusto ipsam. Magni eos maxime earum placeat. Iure temporibus dolorum dolores minima. Consequatur nostrum quod occaecati veritatis iure. Saepe accusantium corrupti dolorum odit cum.
Quis eum quae aliquid velit repellat nam blanditiis. Expedita pariatur aperiam impedit fugit quod distinctio voluptas. Beatae fugiat fugiat. Laboriosam omnis labore modi modi. Commodi eos corrupti id est ipsum animi laudantium quidem. Quos odio deserunt dolor aut voluptatum.",
    "title": "Voluptatem eius officiis iure dolorem quam ratione eos recusandae in.",
  },
  {
    "active": "2024-02-21T14:53:58.427Z",
    "expires": "2024-04-17T20:50:33.926Z",
    "icon": "Reggae",
    "id": "ea9e3a54-ef36-4d2e-aa92-a4c932ca45d8",
    "message": "Numquam quo odit ex aspernatur aliquam totam suscipit perspiciatis iste. Iure sequi libero quis eaque rerum eaque. Facere laboriosam accusantium in fugit. Soluta dolore voluptatibus. Ipsum aliquam perferendis rem reiciendis tenetur.
Praesentium saepe consectetur autem vero labore provident tempora provident. Non quaerat voluptatem repellendus. Illum error quo neque. Necessitatibus quae labore.",
    "title": "Quod dolore debitis laboriosam numquam similique.",
  },
  {
    "active": "2024-02-16T07:12:25.064Z",
    "icon": "plum",
    "id": "6a579869-fe57-4b7c-89e5-13b839b28863",
    "message": "Quam modi quas minima deleniti minus veniam quos quasi hic. Inventore dolorem quibusdam dolore vel illo. Iure odio vero nulla. Ad neque sapiente. Itaque ipsa aspernatur assumenda tempore tenetur impedit. Deserunt quos quisquam exercitationem beatae quasi eum enim.
Incidunt consectetur voluptas. Beatae incidunt maiores ipsa eius ut modi dicta officiis. Voluptates quibusdam assumenda et voluptates culpa.",
    "title": "Cupiditate blanditiis vero dolores quisquam voluptas beatae nostrum possimus alias.",
  },
  {
    "active": "2024-02-15T09:48:24.875Z",
    "expires": "2024-03-28T14:45:05.532Z",
    "icon": "evenly",
    "id": "41d51fe5-7de6-4b5b-85e3-ec7e169e9dfc",
    "message": "Libero facilis officia ducimus vero dicta. Nulla illum corporis odio amet impedit ipsa. Aperiam est pariatur. Fugit eveniet magnam nostrum quam temporibus fugit. Autem dicta cupiditate non. Facere consequatur tenetur quam asperiores dolore nam magni.
Aliquam aspernatur ullam odit veritatis sapiente. Magnam dolor nihil consectetur ut modi natus neque. Doloremque facere quasi soluta tempore accusantium amet at. Excepturi nulla ipsa deserunt commodi.",
    "title": "Expedita eius fuga occaecati.",
  },
  {
    "active": "2024-02-14T16:24:41.212Z",
    "expires": "2024-05-17T04:44:52.601Z",
    "icon": "Jupiter",
    "id": "8176fc01-d18d-4b0a-8941-84fc82798aef",
    "message": "Accusamus temporibus sed omnis quo. Delectus facilis sit molestias aliquam hic. Debitis quisquam quis doloribus voluptatem nisi ex repellat. Aspernatur omnis fugit amet id est officia. Optio vel at quos ipsum vero praesentium officia est. Veritatis porro consequuntur consectetur autem libero praesentium.
Quod voluptates voluptas. Quod sit consectetur voluptates sint. Modi ipsum quisquam. Sint ut sed ducimus nisi dolorum non. Reprehenderit esse doloribus ad nam adipisci suscipit. Corporis quas fugit corrupti.",
    "title": "Ratione occaecati esse veritatis.",
  },
  {
    "active": "2024-02-12T03:15:12.360Z",
    "icon": "Southwest",
    "id": "dd863307-7327-4be2-86c0-6184949f1f37",
    "message": "Omnis libero incidunt sequi rerum consequatur maxime ea voluptatibus. Rerum sit praesentium minus tenetur architecto quasi dolorum. Porro facilis iure sapiente sint. Necessitatibus perspiciatis debitis voluptates ea. Corrupti laboriosam quia mollitia quo libero harum vitae exercitationem.
Modi expedita corporis sed. Minima beatae recusandae beatae. Iure veniam ipsa voluptas. Maxime ipsam quaerat repudiandae maxime. Quasi eaque suscipit. Provident praesentium sed.",
    "title": "Velit molestias dolores magnam.",
  },
]
`;

exports[`Alerts End-to-End Tests when updating an existing alert will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "icon",
      ],
      "received": "number",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "String must contain at least 1 character(s)",
      "minimum": 1,
      "path": [
        "title",
      ],
      "type": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "message",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "active",
      ],
    },
    {
      "code": "invalid_date",
      "message": "Invalid date",
      "path": [
        "expires",
      ],
    },
  ],
}
`;

exports[`Alerts End-to-End Tests when updating an existing alert will return a 400 response if the request body is missing required properties 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "icon",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "title",
      ],
      "received": "undefined",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "message",
      ],
      "received": "undefined",
    },
  ],
}
`;
